add audio settings line for casting

--- a/mopidy.conf
+++ b/mopidy.conf
@@ -10,7 +10,8 @@
 restore_state = true
 
 #[audio]
-#mixer = alsamixer
+#output = tee name=t ! queue ! audioresample ! autoaudiosink t. ! queue ! lamemp3enc ! shout2send async=false render-delay=10 sync=true  max-lateness=1 mount=mopidy ip=127.0.0.1 port=8000 password=hackme
+
 
 #[alsamixer]
 #control = Master
